--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "@angular/cli": "~7.3.6",
     "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/compiler-cli": "~7.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
